<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">"FeedHub"</string>
    <string name="navigation_general">"General"</string>
    <string name="navigation_favorites">"Favorites"</string>
    <string name="navigation_headlines">"Headlines"</string>
    <string name="navigation_subscriptions">"Subscriptions"</string>
    <string name="navigation_settings">"Settings"</string>
    <string name="preference_server_url_title">"Server url"</string>
    <string name="cause_exception">"Cause exception: %s"</string>
    <string name="preference_news_key_title">"News key"</string>
    <string name="preference_category_key_title">"Category key"</string>
    <string name="preference_topics_key_title">"Topics key"</string>
    <string name="navigation_sources">"Sources"</string>
    <string name="add_to_favorites">"Add to favorites"</string>
    <string name="added_to_favorites">"Added to favorites"</string>
    <string name="remove_from_favorites">"Remove from favorites"</string>
    <string name="removed_from_favorites">"Removed from favorites"</string>
    <string name="open_post_confirmation">"Open post?"</string>
    <string name="dialog_yes">"Yes"</string>
    <string name="dialog_no">"No"</string>
    <string name="english">"English"</string>
    <string name="russian">"Russian"</string>
    <string name="ukrainian">"Ukrainian"</string>
    <string name="preference_language_title">"App language"</string>
    <string name="preference_news_language_title">"News languages"</string>
    <string name="chrome_tabs_add_to_favorites">"add to Favorites"</string>
    <string name="preference_about">"About"</string>
</resources>