<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigationGeneral"
        android:icon="@drawable/ic_home_variant_outline"
        android:title="@string/navigation_general" />

    <item
        android:id="@+id/navigationHeadlines"
        android:icon="@drawable/ic_headline"
        android:title="@string/navigation_headlines" />
    <item
        android:id="@+id/navigationSources"
        android:icon="@drawable/ic_source"
        android:title="@string/navigation_sources" />

    <item
        android:id="@+id/navigationSubscriptions"
        android:icon="@drawable/ic_subscriptions"
        android:title="@string/navigation_subscriptions" />

    <item
        android:id="@+id/navigationFavorites"
        android:icon="@drawable/ic_star_outline"
        android:title="@string/navigation_favorites" />

</menu>