<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:iconSpaceReserved="false"
        app:key="server_url"
        app:title="@string/preference_server_url_title" />

    <EditTextPreference
        app:defaultValue="news"
        app:iconSpaceReserved="false"
        app:key="news_key"
        app:title="@string/preference_news_key_title" />

    <EditTextPreference
        app:defaultValue="platform/categories"
        app:iconSpaceReserved="false"
        app:key="category_key"
        app:title="@string/preference_category_key_title" />

    <EditTextPreference
        app:defaultValue="platform/topics"
        app:iconSpaceReserved="false"
        app:key="topics_key"
        app:title="@string/preference_topics_key_title" />

    <ListPreference
        app:defaultValue="en"
        app:entries="@array/languages_entries"
        app:entryValues="@array/languages_values"
        app:iconSpaceReserved="false"
        app:key="language"
        app:title="@string/preference_language_title" />

</PreferenceScreen>